--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "email": "repejota@gmail.com",
         "homepage": "http://repejota.com"
     }],
-    "require": {},
+    "require": {
+        "zerkalica/phpcs": "dev-master"
+    },
     "require-dev": {
         "phpunit/phpunit": "4.7.*"
     },
