--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
+        "phpspec/prophecy-phpunit": "^1.0@dev",
         "zerkalica/phpcs": "dev-master"
     },
     "autoload": {
