--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
         "phpspec/prophecy-phpunit": "^1.0@dev",
-        "zerkalica/phpcs": "dev-master"
+        "zerkalica/phpcs": "dev-master",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
