--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "homepage": "http://repejota.com"
     }],
     "require": {
+        "cocur/background-process": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
