--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,5 +16,7 @@
     </testsuites>
     <logging>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <log type="coverage-html" target="./build/coverage" lowUpperBound="35"
+             highLowerBound="70"/>
     </logging>
 </phpunit>
