--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,9 +9,10 @@
          processIsolation="false"
          stopOnFailure="false"
          syntaxCheck="false">
+
     <testsuites>
         <testsuite name="PHPNats Test Suite">
-            <directory suffix=".php">./tests/</directory>
+            <directory suffix=".php">./tests/Unit/</directory>
         </testsuite>
     </testsuites>
     <logging>
