--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "homepage": "http://repejota.com"
     }],
     "require": {
-        "cocur/background-process": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "cocur/background-process": "dev-master"
     },
     "authors": [
         {
