--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ php:
   - 5.5
   - 5.6
   - nightly
+cache:
+  directories:
+   - vendor
 before_script:
   - sudo apt-get install python-software-properties  # 12.04
   - sudo add-apt-repository -y ppa:duh/golang
