--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
 cache:
   directories:
    - vendor
+   - $HOME/.composer/cache
 before_script:
   - sudo apt-get install python-software-properties  # 12.04
   - sudo add-apt-repository -y ppa:duh/golang
