--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "minimum-stability": "dev",
     "license": "MIT",
     "require": {
+        "ircmaxell/random-lib": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
