Run NATS docker container on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ cache:
   directories:
    - vendor
    - $HOME/.composer/cache
+before_install:
+  - docker run -d --name nats nats
 before_script:
   - make deps
 script:
