--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
     "require-dev": {
         "phpunit/phpunit": "4.7.*",
         "satooshi/php-coveralls": "dev-master",
-        "squizlabs/php_codesniffer": "~2.0"
+        "squizlabs/php_codesniffer": "~2.0",
+        "phpspec/phpspec": "~2.0"
+    },
+    "config": {
+        "bin-dir": "bin"
     },
     "authors": [
         {
@@ -38,13 +42,9 @@
         }
     ],
     "autoload": {
-        "psr-4": {
-            "Nats\\": "src"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\Nats\\": "tests/Unit"
+        "psr-0": {
+            "Nats": "src",
+            "Nats\\Test": "src"
         }
     }
 }
