Better Makefile also added lint-php to the CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
 before_script:
   - make deps
 script:
+  - mkdir -p lint-php
   - mkdir -p build/logs
   - make test
 after_script:
