Added python3 and nodejs benchmarks

--- a/benchmark/Makefile
+++ b/benchmark/Makefile
@@ -1,10 +1,10 @@
-all: php python go
+all: go php nodejs python python3
 
 .PHONY: php
 php:
 	@echo
 	@echo "PHP Benchmark:"
-	@echo "--------------"
+	@echo "=============="
 	@php --version
 	@echo "--------------"
 	@cd php && make benchmark
@@ -13,18 +13,37 @@ php:
 python:
 	@echo
 	@echo "Python Benchmark:"
-	@echo "--------------"
+	@echo "=============="
 	@python --version
 	@echo "--------------"
 	@cd python && make benchmark
+
+.PHONY: python3
+python3:
+	@echo
+	@echo "Python 3 Benchmark:"
+	@echo "=============="
+	@python3 --version
+	@echo "--------------"
+	@cd python3 && make benchmark
+
 
 .PHONY: go
 go:
 	@echo
 	@echo "Go Benchmark:"
+	@echo "=============="
 	@echo "--------------"
 	@go version
 	@echo "--------------"
 	@cd go && make benchmark
 
+.PHONY: nodejs
+nodejs:
+	@echo
+	@echo "Node JS Benchmark:"
+	@echo "=============="
+	@node --version
+	@echo "--------------"
+	@cd nodejs && make benchmark
 
