Execute full lint on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ before_script:
   - make deps
 script:
   - mkdir -p build/logs
-  - make lint-php
-  - make lint-psr2
+  - make lint
   - make test
 after_script:
   - php vendor/bin/coveralls
