--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
-        "satooshi/php-coveralls": "dev-master",
-        "phpspec/phpspec": "~2.0"
+        "phpspec/phpspec": "~2.0",
+        "satooshi/php-coveralls": "dev-master"
     },
     "authors": [
         {
