--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "5.*",
-        "phpspec/phpspec": "~2.0",
+        "phpspec/phpspec": "^3.0",
         "satooshi/php-coveralls": "dev-master"
     },
     "authors": [
