--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ cache:
 before_install:
   - docker run -d -p 4222:4222 --name nats nats
 before_script:
+  - make dist-clean
   - make deps
   - make dev-deps
 script:
