--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require-dev": {
         "phpunit/phpunit": "5.*",
         "phpspec/phpspec": "^3.0",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "leanphp/phpspec-code-coverage": "^3.2@dev"
     },
     "authors": [
         {
