Add support for all callable type not just Closure
Added a test for the new behavior.

composer.json - Added test folder to autoload if in devmode
phpunit.xml.dist - Fixed path to test folder

--- a/composer.json
+++ b/composer.json
@@ -40,8 +40,12 @@
     ],
     "autoload": {
         "psr-0": {
-            "Nats": "src",
-            "Nats\\Test": "src"
+            "Nats": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Nats\\tests\\Unit\\": "test/"
         }
     }
 }
