--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require-dev": {
         "phpunit/phpunit": "5.*",
         "phpspec/phpspec": "^3.0",
-        "satooshi/php-coveralls": "dev-master",
+        "satooshi/php-coveralls": "2.0.x-dev",
         "leanphp/phpspec-code-coverage": "^3.2@dev"
     },
     "authors": [
