--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
   - make dev-deps
 script:
   - mkdir -p build/logs
-  - make lint
+  - make lint-php
   - make test
 after_script:
   - php vendor/bin/coveralls
