--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,4 +20,9 @@
         <log type="coverage-html" target="./build/coverage" lowUpperBound="35"
              highLowerBound="70"/>
     </logging>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src</directory>
+        </whitelist>
+    </filter>
 </phpunit>
