--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,19 +7,18 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false">
+         stopOnFailure="false">
 
     <testsuites>
         <testsuite name="PHPNats Test Suite">
-            <directory suffix=".php">./tests/Unit/</directory>
+            <directory suffix=".php">./tests</directory>
         </testsuite>
     </testsuites>
-    <logging>
-        <log type="coverage-clover" target="build/logs/clover.xml"/>
-        <log type="coverage-html" target="./build/coverage" lowUpperBound="35"
-             highLowerBound="70"/>
-    </logging>
+    <!--    <logging>-->
+    <!--        <log type="coverage-clover" target="build/logs/clover.xml"/>-->
+    <!--        <log type="coverage-html" target="./build/coverage" lowUpperBound="35"-->
+    <!--             highLowerBound="70"/>-->
+    <!--    </logging>-->
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./src</directory>
